[package]
name = "epub_emoji_x"
version = "0.1.0"
edition = "2021"
description = "将epub内emoji全部替换为图片的工具，可独立运行和嵌入调用"
authors = ["Your Name <your@email.com>"]
license = "MIT"

[lib]
name = "epub_emoji_x"
crate-type = ["cdylib", "rlib"]

[dependencies]
epub = "2.0"
regex = "1.10"
unicode-segmentation = "1.11"
reqwest = { version = "0.12", features = ["blocking"] }
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
base64 = "0.22"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
