[package]
name = "epubemojix"
version = "0.1.0"
edition = "2021"
description = "将epub内emoji全部替换为图片的工具，可独立运行和嵌入调用。支持本地/自动下载emoji图片，支持批量处理。"
authors = ["你的名字 <your@email.com>"]
license = "MIT"

[lib]
name = "epubemojix"
crate-type = ["cdylib", "rlib"]

[dependencies]
zip = "0.6"
unicode-segmentation = "1.11"
reqwest = { version = "0.12", features = ["blocking"] }
clap = { version = "4.5", features = ["derive"] }
emojis = "0.6"
quick-xml = "0.31"
pathdiff = "0.2"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"

[[bin]]
name = "EpubEmojiX"
path = "src/main.rs"
